# sbrl

./: DESCRIPTION  MD5  configure  configure.ac
R/: sbrlmod.R
inst/include/: gmp.h
man/: predict.sbrl.Rd  print.sbrl.Rd  sbrl.Rd
src/: Makevars.in  quicksort.c  rcpp_module.cpp  rule.h  rulelib.c  train.c
